objects/Opportunity/fields/Signature_Type__c.field-meta.xml
<CustomField>
    <fullName>Signature_Type__c</fullName>
    <label>Signature Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Original Signatures Required</fullName>
            </value>
            <value>
                <fullName>Scanned Version Accepted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>