objects/Opportunity/fields/Special_Insurance_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Special_Insurance_Requirements__c</fullName>
    <label>Special Insurance Requirements</label>
    <type>TextArea</type>
</CustomField>