objects/Opportunity/fields/Stage_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Stage_Change_Date__c</fullName>
    <inlineHelpText>Last Stage Change Date</inlineHelpText>
    <label>Stage Change Date</label>
    <type>Date</type>
</CustomField>