objects/Opportunity/fields/Stage_Closed_Set_Date__c.field-meta.xml
<CustomField>
    <fullName>Stage_Closed_Set_Date__c</fullName>
    <label>Stage Closed Set Date</label>
    <type>Date</type>
</CustomField>