objects/Opportunity/fields/Stage_Proposal_Quote_Submitted_Set_Date__c.field-meta.xml
<CustomField>
    <fullName>Stage_Proposal_Quote_Submitted_Set_Date__c</fullName>
    <label>Stage Proposal/Quote Submitted  Set Date</label>
    <type>Date</type>
</CustomField>