objects/Opportunity/fields/Submittal_Type__c.field-meta.xml
<CustomField>
    <fullName>Submittal_Type__c</fullName>
    <label>Submittal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online Portal</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Hard Copies</fullName>
            </value>
            <value>
                <fullName>FedEx</fullName>
                <isActive>false</isActive>
                <label>FedEx</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>