objects/Opportunity/fields/Top_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Top_Accounts__c</fullName>
    <label>Top Accounts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>