objects/Opportunity/fields/Transporter__c.field-meta.xml
<CustomField>
    <fullName>Transporter__c</fullName>
    <label>Transporter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>