objects/Opportunity/fields/Value_Guestimate__c.field-meta.xml
<CustomField>
    <fullName>Value_Guestimate__c</fullName>
    <label>Value Guestimate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>