objects/Opportunity/fields/Waste_Description__c.field-meta.xml
<CustomField>
    <fullName>Waste_Description__c</fullName>
    <label>Waste Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>