objects/Opportunity/fields/Waste_Generator__c.field-meta.xml
<CustomField>
    <fullName>Waste_Generator__c</fullName>
    <label>Waste Generator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>