objects/Opportunity/recordTypes/Acquisition.recordType-meta.xml
<RecordType>
    <fullName>Acquisition</fullName>
    <active>true</active>
    <businessProcess>Acquisition Opportunity</businessProcess>
    <label>Acquisition</label>
</RecordType>