objects/Opportunity/recordTypes/Bid_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Bid_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Bid Opportunity</businessProcess>
    <label>Bid</label>
</RecordType>