objects/Opportunity/recordTypes/Internalizing_Republic_Spend.recordType-meta.xml
<RecordType>
    <fullName>Internalizing_Republic_Spend</fullName>
    <active>true</active>
    <businessProcess>Sales Opportunity</businessProcess>
    <label>Internalizing Republic Spend</label>
</RecordType>