objects/Opportunity/validationRules/Cannot_change_Contract_Manger.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_change_Contract_Manger</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
OR(
ISNEW(),((ISCHANGED( Contract_Manager__c  ))),$User.Id != '005f4000000nrWG'
||

ISNEW(),((ISCHANGED( Contract_Manager__c  ))),$User.Id != '005f4000000oILJ'



))</errorConditionFormula>
    <errorMessage>You do not have sufficient privileges to edit the Contract Manager field</errorMessage>
</ValidationRule>