objects/Opportunity/validationRules/Competitor_Lost_To.validationRule-meta.xml
<ValidationRule>
    <fullName>Competitor_Lost_To</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
 ISPICKVAL( StageName , "Closed Lost"),


 RecordTypeId = '0121V000001NMoN',

   ISBLANK( Competitor_Lost_To__c))</errorConditionFormula>
    <errorMessage>Please enter a value for  Competitor Lost To</errorMessage>
</ValidationRule>