objects/Opportunity/validationRules/Est_Profit_Margin.validationRule-meta.xml
<ValidationRule>
    <fullName>Est_Profit_Margin</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
 ISPICKVAL( StageName , "Proposal/Quote Submitted"),


 RecordTypeId = '0121V000001NMoI',

   ISBLANK(Est_Profit_Margin__c))</errorConditionFormula>
    <errorMessage>Please enter a value for Est.Profit Margin</errorMessage>
</ValidationRule>