objects/Opportunity/validationRules/Estimated_Service_Start_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Estimated_Service_Start_Date_Required</fullName>
    <active>true</active>
    <description>Estimated Service Start Date is mandatory when Stage is equal to Proposal/Quote Submitted.</description>
    <errorConditionFormula>AND(
					ISPICKVAL(StageName , 'Proposal/Quote Submitted'),
  			ISBLANK(Estimated_Service_End_Date__c),
					OR(RecordType.DeveloperName = 'Sales',
								RecordType.DeveloperName = 'Internalizing_Republic_Spend',
								RecordType.DeveloperName = 'Master')
					)</errorConditionFormula>
    <errorDisplayField>Estimated_Service_End_Date__c</errorDisplayField>
    <errorMessage>Estimated Service Start Date is mandatory when Stage is equal to Proposal/Quote Submitted.</errorMessage>
</ValidationRule>