objects/Opportunity/validationRules/Opportunity_Lost.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_Lost</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
 ISPICKVAL( StageName , "Closed Lost"),

 ISPICKVAL(  Loss_Reason__c  , ''))</errorConditionFormula>
    <errorMessage>Please enter a value for  "Loss Reason"</errorMessage>
</ValidationRule>