objects/Opportunity/validationRules/Opportunity_NoBidReason.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_NoBidReason</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
 ISPICKVAL( StageName , "No Bid"),

 ISBLANK( No_Bid_Reason__c ))</errorConditionFormula>
    <errorDisplayField>No_Bid_Reason__c</errorDisplayField>
    <errorMessage>No Bid Reason cannot be blank when stage equals No Bid.</errorMessage>
</ValidationRule>