objects/Opportunity/validationRules/Republic_Rep.validationRule-meta.xml
<ValidationRule>
    <fullName>Republic_Rep</fullName>
    <active>false</active>
    <description>If lead source = Republic Referral, Republic Rep and Email cannot be blank.</description>
    <errorConditionFormula>AND( 
 ISPICKVAL(  LeadSource , "Republic Services Referral"),

OR(
ISBLANK (Republic_Rep_Email__c),
ISBLANK( Republic_Rep_Name__c )))</errorConditionFormula>
    <errorDisplayField>Republic_Rep_Name__c</errorDisplayField>
    <errorMessage>Please enter a value for Republic Rep Name and Republic Rep Email</errorMessage>
</ValidationRule>