objects/Opportunity/validationRules/Require_Fields_when_Cross_Sell.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Fields_when_Cross_Sell</fullName>
    <active>true</active>
    <description>Require Cross Sell field to require when Lead Source is set to 'Cross Sell'</description>
    <errorConditionFormula>AND(
				ISPICKVAL(LeadSource, "Republic Services Referral"),
				$RecordType.DeveloperName = "Sales",
    OR(
        ISPICKVAL(Referring_Vertical__c, ""),
								ISBLANK(Republic_Rep_Name__c),
        ISBLANK(Republic_Rep_Email__c)
    )
)</errorConditionFormula>
    <errorMessage>The Lead Source you have selected requires additional information in order to save</errorMessage>
</ValidationRule>