objects/Opportunity/validationRules/Restrict_creation_of_opportunity.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_creation_of_opportunity</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL(Account.Customer_Status__c, 'Inactive') &amp;&amp; ISNEW()</errorConditionFormula>
    <errorMessage>The account is not active. You cannot create quotes/orders for inactive accounts.</errorMessage>
</ValidationRule>