objects/Opportunity/listViews/Last_2_WeeksLosses.listView-meta.xml
<ListView>
    <fullName>Last_2_WeeksLosses</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>Stage_Change_Date__c</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Closed Lost</value>
    </filters>
    <filters>
        <field>Stage_Change_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>LAST_N_WEEKS:2</value>
    </filters>
    <label>Last 2 Weeks - Losses</label>
</ListView>