objects/Opportunity/listViews/Last_2_WeeksWins.listView-meta.xml
<ListView>
    <fullName>Last_2_WeeksWins</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>Stage_Change_Date__c</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </filters>
    <filters>
        <field>Stage_Change_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>LAST_N_WEEKS:2</value>
    </filters>
    <filters>
        <field>CORE.USERS.FULL_NAME</field>
        <operation>contains</operation>
    </filters>
    <filters>
        <field>Service_Center__c</field>
        <operation>contains</operation>
    </filters>
    <label>Last 2  Weeks - Wins</label>
</ListView>