objects/Opportunity/listViews/New_Opps_Last_2.listView-meta.xml
<ListView>
    <fullName>New_Opps_Last_2</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>Stage_Change_Date__c</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_WEEKS:2</value>
    </filters>
    <label>New Opps_Last 2 Weeks</label>
</ListView>