objects/Opportunity/listViews/Opps_Closing_Next_2Weeks.listView-meta.xml
<ListView>
    <fullName>Opps_Closing_Next_2Weeks</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>Stage_Change_Date__c</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>equals</operation>
        <value>NEXT_N_WEEKS:2</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Opportunity Qualified,Proposal/Quote Creation Begun,Proposal/Quote Submitted</value>
    </filters>
    <label>Opps Closing_Next 2 Weeks</label>
</ListView>