objects/Opportunity/listViews/Opps_Created_Last_Wk_Drums.listView-meta.xml
<ListView>
    <fullName>Opps_Created_Last_Wk_Drums</fullName>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>Service_Center_Name__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Job_Type__c</columns>
    <columns>OPPORTUNITY.TYPE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Job_Type__c</field>
        <operation>equals</operation>
        <value>Disposal - Haz Drum,Disposal - NonHaz Drum</value>
    </filters>
    <filters>
        <field>Stage_Change_Date__c</field>
        <operation>greaterThan</operation>
        <value>3/13/2020</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Opportunity Qualified,Proposal/Quote Creation Begun,Proposal/Quote Submitted</value>
    </filters>
    <label>Opps Created Last Wk_Drums</label>
</ListView>